syntax = "proto3";
option go_package = "pkg/proto";
package proto;

service Sync {
    rpc Send (SyncSyn) returns (SyncAck) {
    }
}

message SyncSyn {
    string commandArgs = 2;
}

message SyncAck {
    string response =1;
    string error = 2;

}
