syntax = "proto3";
option go_package = "pkg/proto";
package proto;

enum CommandType {
  Shell = 0;
}